<resources>
    <string name="app_name">Word Town</string>
    <string name="title_game">Game</string>
    <string name="title_collections">Collections</string>
    <string name="title_self">Myself</string>
    <string name="welcome">Welcome To Word Town</string>
    <string name="level_choice">Choose Difficulty:</string>
    <string name="prompt_easy">Easy</string>
    <string name="prompt_normal">Normal</string>
    <string name="prompt_hard">Hard</string>
    <string name="des_avatar">avatar</string>
    <string name="prompt_login">登录</string>
    <string name="text_bio">点击按钮以登录/切换</string>
    <string name="text_username">请登录</string>
    <string name="prompt_settings">设置</string>
    <string name="prompt_clear_all">清除全部数据</string>
    <string name="score_board">Highest Score</string>
    <string name="example">example</string>
    <string name="game_status">Game Status</string>
    <string name="time">Time:</string>
    <string name="score">Score:</string>
    <string name="game_result">Game Result</string>
    <string name="time_usage">Time Usage:</string>
    <string name="total_score">Total Score:</string>
    <string name="share">Share</string>
    <string name="quit">Quit</string>
    <string name="prompt_delete">Delete</string>
    <string name="prompt_star">Star</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome_text">Welcome to Word Town</string>
    <string name="_1_1_3">1.1.3</string>
</resources>