<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_3"
    tools:context=".Board">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="385dp"
        android:layout_height="120dp"
        android:background="@drawable/game_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="112dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="112dp"
            android:text="@string/game_status"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="195dp"
            android:layout_marginTop="70dp"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/time_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="70dp"
            android:text="60s"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/dynamic_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="295dp"
            android:layout_marginTop="70dp"
            android:text="0pts"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/music_playback"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/music_button"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minWidth="12dp"
        android:minHeight="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:icon="@drawable/ic_baseline_music_note_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="280dp"
        android:layout_height="20dp"
        android:max="4"
        android:progress="4"
        app:layout_constraintBottom_toBottomOf="@+id/music_playback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/music_playback"
        app:layout_constraintVertical_bias="0.5" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttons_background"
        android:columnCount="4"
        android:rowCount="4"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <Button
            android:id="@+id/button_0_0"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_0_1"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_0_2"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_0_3"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_1_0"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_1_1"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_1_2"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_1_3"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_2_0"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_2_1"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_2_2"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_2_3"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_3_0"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_3_1"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_3_2"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_3_3"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal|fill_vertical"
            android:width="80dp"
            android:height="80dp"
            android:text="@string/example"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />
    </GridLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="385dp"
        android:layout_height="385dp"
        android:background="@drawable/game_result"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:text="@string/game_result"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="130dp"
            android:text="@string/time_usage"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="200dp"
            android:text="@string/total_score"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/time_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="250dp"
            android:layout_marginTop="130dp"
            android:text="60s"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/total_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="250dp"
            android:layout_marginTop="200dp"
            android:text="120pts"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/prompt_share"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="45dp"
            android:layout_marginTop="280dp"
            android:clickable="false"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/button_1_selector"/>

        <Button
            android:id="@+id/prompt_quit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="280dp"
            android:layout_marginEnd="45dp"
            android:clickable="false"
            android:text="@string/quit"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/button_1_selector"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>